# WCH_MCU

./: .gitmodules  CMakeLists.txt  README.md  README_howto.md  wch-arm.cfg
App/: CMakeLists.txt
App/GPIO_Toggle/: CMakeLists.txt  Main.c
App/GPIO_Toggle_riscv/: CMakeLists.txt  main.c
App/RF_PHY/: CMakeLists.txt  RF_PHY.c  RF_main.c  ch32f20x_it.c
App/RTC/: CMakeLists.txt  Main.c
CH32F2xxSDK/: CMakeLists.txt  _soc_libc.c
CH32F2xxSDK/BLE/HAL/: CH32F20x.sct  MCU.c  RTC.c
CH32F2xxSDK/BLE/LIB/: wchble.h
CH32F2xxSDK/Debug/: debug.c
CH32F2xxSDK/Startup/: startup_ch32f20x_D6.s  startup_ch32f20x_D8.s  startup_ch32f20x_D8C.s  startup_ch32f20x_D8W.c  startup_ch32f20x_D8W.s  startup_ch32f20x_D8W_gcc.old.s  startup_ch32f20x_D8W_gcc.s
CH32F2xxSDK/StdPeriphDriver/inc/: ch32f20x.h  ch32f20x_opa.h
CH32F2xxSDK/templates/: ch32f20x_conf.h  ch32f20x_it.c  ch32f20x_it.h
CH32V2xxSDK/: CMakeLists.txt  _soc_libc.c
CH32V2xxSDK/Core/: core_riscv.h
CH32V2xxSDK/Peripheral/inc/: ch32v20x.h
components/: CMakeLists.txt
tools/openocd_mac/: ch32f1x.cfg
